--- a/grid-p.html
+++ b/grid-p.html
@@ -20,6 +20,7 @@
         display: grid;
         grid-auto-flow: dense;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 15px;
       }
 
       img {
